--- a/Sistema/templates/compra_venta/orden_venta.html
+++ b/Sistema/templates/compra_venta/orden_venta.html
@@ -3,7 +3,7 @@
 
 <div class="container mt-4">
     <!-- Titulo de la pagina -->
-    <h2>venta de producto</h2>
+    <h2>venta de productos</h2>
     <div style="display: grid; grid-template-columns: repeat(2,1fr);">
         <div>
             <!-- Formulario para procesar la compra /venta -->
@@ -54,7 +54,7 @@
                 </div>
 
                 <!-- Mostrar el total de la compra -->
-                <p>Total de la compra: ${{ total }}</p>
+                <p>Total de la venta: ${{ total }}</p>
                 
                 <div style="display: flex; justify-content: space-between;">
                     <div>
