--- a/Sistema/templates/proveedores/proveedores.html
+++ b/Sistema/templates/proveedores/proveedores.html
@@ -6,7 +6,7 @@
     <div style="display: grid; grid-template-columns: repeat(2,1fr);">
         <form class="mb-3" action="/proveedores" method="GET">
             <div class="input-group" style="width: 100%; gap: 10px;">
-                <input type="text" class="form-control" placeholder="Buscar por nombre o DNI" name="search">
+                <input type="text" class="form-control" placeholder="Buscar por nombre o Cuit" name="search">
                 <button class="btn btn-outline-secondary" type="submit">Buscar</button>
             </div>
         </form>
