--- a/Sistema/templates/compra_venta/orden_venta.html
+++ b/Sistema/templates/compra_venta/orden_venta.html
@@ -127,7 +127,7 @@
 <script>
     function confirmarProcesarVenta() {
         Swal.fire({
-            title: '¿Estás seguro de procesar la venta?',
+            title: '¿Estás seguro de realizar la venta?',
             text: 'Esta acción no se puede deshacer',
             icon: 'question',
             showCancelButton: true,
