--- a/Sistema/templates/productos/create.html
+++ b/Sistema/templates/productos/create.html
@@ -28,19 +28,19 @@
                 <!-- Campo para ingresar el nombre del producto -->
                 <div class="form-group" style="margin: 0;">
                     <label for="txtNombre">Nombre</label>
-                    <input id="txtNombre" class="form-control" type="text" name="txtNombre">
+                    <input id="txtNombre" class="form-control" type="text" name="txtNombre" required>
                 </div>
 
                 <!-- Campo para ingresar la marca del producto -->
                 <div class="form-group" style="margin: 0;">
                     <label for="txtMarca">Marca</label>
-                    <input id="txtMarca" class="form-control" type="text" name="txtMarca">
+                    <input id="txtMarca" class="form-control" type="text" name="txtMarca" required>
                 </div>
 
                 <!-- Campo para ingresar el tipo del producto -->
                 <div class="form-group" style="margin: 0;">
                     <label for="txtTipo">Tipo</label>
-                    <input id="txtTipo" class="form-control" type="text" name="txtTipo">
+                    <input id="txtTipo" class="form-control" type="text" name="txtTipo" required>
                 </div>
 
                 <!-- Campo para ingresar la descripción del producto -->
@@ -52,19 +52,19 @@
                 <!-- Campo para ingresar la cantidad del producto -->
                 <div class="form-group" style="margin: 0;">
                     <label for="txtCantidad">Cantidad</label>
-                    <input id="txtCantidad" class="form-control" type="number" name="txtCantidad" value=0>
+                    <input id="txtCantidad" class="form-control" type="number" name="txtCantidad" value=0 required>
                 </div>
 
                 <!-- Campo para ingresar el precio del producto -->
                 <div class="form-group" style="margin: 0;">
                     <label for="txtPrecio">Precio</label>
-                    <input id="txtPrecio" class="form-control" type="number" name="txtPrecio">
+                    <input id="txtPrecio" class="form-control" type="number" name="txtPrecio" required>
                 </div>
 
                 <!-- Campo para ingresar el minimo del producto -->
                 <div class="form-group" style="margin: 0;">
                     <label for="txtMinimo">Mínimo</label>
-                    <input id="txtMinimo" class="form-control" type="number" name="txtMinimo">
+                    <input id="txtMinimo" class="form-control" type="number" name="txtMinimo" required>
                 </div>
 
                 <!-- Campo para ingresar la salida del producto -->
