--- a/Sistema/templates/clientes/nuevo_cliente.html
+++ b/Sistema/templates/clientes/nuevo_cliente.html
@@ -6,7 +6,7 @@
     <form method="POST" action="/agregar_cliente">
         <div class="form-group">
             <label for="nombre">Nombre:</label>
-            <input type="text" class="form-control" id="nombre" name="nombre" required>
+            <input type="text" class="form-control" id="nombre" name="nombre" value="{{ _nombre }}" required>
         </div>
         <div class="form-group">
             <label for="dni" style="display: flex;">DNI:
@@ -14,7 +14,7 @@
                     <div id="mensaje" style="margin: 0 0 0 10px; color: red;">{{ mensaje }}</div>
                 {% endif %}
             </label>
-            <input type="text" class="form-control" id="dni" name="dni" pattern="[0-9]{7,9}" title="Ingresar un DNI valido (Entre 7 y 9 digitos)" required>
+            <input type="text" class="form-control" id="dni" name="dni" pattern="[0-9]{7,9}" title="Ingresar un DNI valido (Entre 7 y 9 digitos)" value="{{ _dni }}" required>
         </div>
         <div class="form-group" style="display: none;">
             <label for="cuit">CUIT:</label>
@@ -22,11 +22,11 @@
         </div>
         <div class="form-group">
             <label for="numero">Número:</label>
-            <input type="text" class="form-control" id="numero" name="numero" pattern="[0-9]+" title="Ingresa solo números" required>
+            <input type="text" class="form-control" id="numero" name="numero" pattern="[0-9]+" title="Ingresa solo números" value="{{ _numero }}" required>
         </div>
         <div class="form-group">
             <label for="direccion">Dirección:</label>
-            <input type="text" class="form-control" id="direccion" name="direccion" required>
+            <input type="text" class="form-control" id="direccion" name="direccion" value="{{ _direccion }}" required>
         </div>
 
         <button type="submit" class="btn btn-primary">Agregar Cliente</button>
