--- a/Sistema/templates/productos/create.html
+++ b/Sistema/templates/productos/create.html
@@ -2,16 +2,16 @@
 {% block body %}
 
 <div class="container mt-4">
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
+    <!-- {% with messages = get_flashed_messages() %}
+    {% if messages %} -->
     <!-- Si hay mensajes flash, mostrar una alerta de peligro -->
-    <div class="alert alert-danger" role="alert">
+    <!-- <div class="alert alert-danger" role="alert">
         {% for message in messages %}
         {{ message }}
         {% endfor %}
     </div>
     {% endif %}
-    {% endwith %}
+    {% endwith %} -->
 
     <div class="contenedor_interno">
         <!-- Titulo del formulario -->
